added character class character sheet can now roll for stats added up button functionality to all child activities added menu for navigation to other activities from main

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DiceRollActivity" />
-        <activity android:name=".CharacterActivity"></activity>
+        <activity android:name=".CharacterActivity"/>
     </application>
 
 </manifest>
